<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LongitudeUpdater</string>
    <string name="action_settings">Settings</string>
    <string name="action_friends">Friends</string>
    <string name="action_delete_selected_buddies">Delete selected buddies</string>

    <string name="pref_buddies">Buddies</string>
    <string name="pref_buddies_share">Share</string>
    <string name="pref_create_qrcode">Create QR Code</string>
    <string name="pref_summary_create_qrcode">Create a QR a code to be scanned by your friends.</string>
    <string name="pref_scan_qrcode">Scan QR Code</string>
    <string name="pref_summary_scan_qrcode">Scan a QR Code from your friends.</string>

    <string name="pref_server_settings">Server settings</string>
    <string name="pref_summary_server_address">Server address (incl. http://)</string>
    <string name="pref_title_server_address">Server address</string>

    <string name="pref_server_password">Server password</string>
    <string name="pref_summary_server_password">Password used for communication with your server.</string>
    <string name="pref_title_server_password">Server password</string>

    <string name="pref_personal_settings">Personal settings</string>
    <string name="pref_summary_phone_number">The phone number is used while sharing your location with your friends.</string>
    <string name="pref_title_phone_number">Your phone number</string>
</resources>
